name:              reage
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

executable         reage

    main-is:           main.hs
    hs-source-dirs: .

    
    other-modules: PersistentFields

    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                FlexibleContexts         
                GADTs 
                GeneralizedNewtypeDeriving
                MultiParamTypeClasses     
                TypeFamilies
                DeriveDataTypeable
                DeriveDataTypeable
                EmptyDataDecls
                FlexibleInstances
                ViewPatterns

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.4.1      && < 1.5
                 , yesod-static                  >= 1.4.0.3    && < 1.6
                 , yesod-form                    >= 1.4.0      && < 1.5
                 , persistent                    >= 2.0        && < 2.3
                 , text
                 , persistent-mysql
                 , persistent-template
                 , time
                 , monad-logger >= 0.3
                 , aeson                          >= 0.9
                 , unordered-containers           >= 0.2